Added dirty staging handling
